# pve-ddns-client

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md  lgtm.yml
.github/workflows/: cmake-mips.yml  cmake.yml  codeql.yml
res/: pve-ddns-client.yml
src/: config.cpp  config.h  main.cpp  pve_api_client.cpp  pve_api_client.h  utils.cpp  utils.h
src/dns_service/: dns_service.cpp  dns_service.h  dns_service_cloudflare.cpp  dns_service_cloudflare.h  dns_service_dnspod.cpp  dns_service_dnspod.h  dns_service_porkbun.cpp  dns_service_porkbun.h
src/public_ip/: public_ip_getter.cpp  public_ip_getter.h  public_ip_getter_iface.cpp  public_ip_getter_iface.h  public_ip_getter_ipify.cpp  public_ip_getter_ipify.h  public_ip_getter_porkbun.cpp  public_ip_getter_porkbun.h
src/pve/: pve_api_client.cpp  pve_api_client.h  pve_pct_wrapper.cpp  pve_pct_wrapper.h
